--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,12 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
+
+# Configuraciones sensibles
+.cursor/
+scripts/
+docs/
