--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@tanstack/react-query": "^5.83.0",
     "expo": "~53.0.20",
     "expo-camera": "~16.1.11",
+    "expo-dev-client": "~5.2.4",
     "expo-image-picker": "~16.1.4",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
@@ -35,9 +38,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.20.0",
-    "zustand": "^5.0.6",
-    "expo-dev-client": "~5.2.4",
-    "expo-system-ui": "~5.0.10"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
