--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "check-deployment": "node scripts/check-deployment.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
