--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build": "npx expo export --platform web",
     "check-deployment": "node scripts/check-deployment.js"
   },
   "dependencies": {
