--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "inventario-fodem",
   "version": "1.0.0",
+  "description": "Aplicación de gestión de inventario para hogares",
+  "keywords": ["inventario", "hogar", "fodem", "react-native", "expo"],
+  "author": "FODEM",
+  "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
